--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/portrait1.jpg" alt="Portrait of Kim van den Ham" width="150">
+          <img class="w-100 rounded-circle my-3" src="images/profilepicture2.jpg" alt="Portrait of Kim van den Ham" width="150">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -99,7 +99,9 @@
                   </ul>
                 </div>
               </li>
+			
 
+				
               <!-- 2nd item in professional experience -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
