--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content text-end">
-          <h1 class="fw-bolder">Kim van den Ham&nbsp;</h1>
+          <h1 class="fw-bolder">Kim van den Ham first&nbsp;</h1>
           <h5 class="fst-italic tagline">Student Creative Business - Breda University of Applied Sciences&nbsp;&nbsp;</h5>
         </div>
       </header>
