--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content text-end">
           <h1 class="fw-bolder">Kim van den Ham&nbsp;&nbsp;</h1>
-          <h5 class="fst-italic tagline">verry good student Creative Business - Breda University of Applied Sciences&nbsp;&nbsp;</h5>
+          <h5 class="fst-italic tagline">Student Creative Business - Breda University of Applied Sciences&nbsp;&nbsp;</h5>
         </div>
       </header>
 
