--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
               </li>
  <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/logoschool.png" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/logoschool.png" 
+			      alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>MBO, Level 4, Leader Leisure and Hospitality, Gilde Opleidingen&nbsp;</h4>
