--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </li>
  <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/logoschool.png" 
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/dezedan.jpg"
 			      alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
@@ -154,7 +154,7 @@
             </li>
 				<li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/logoschool.png" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/dezedan.jpg" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>MBO, Level 4, Education Assistant,<br>
